--- a/src/Component/NavbarStyle.css
+++ b/src/Component/NavbarStyle.css
@@ -3,7 +3,7 @@ nav {
   align-items: center;
   justify-content: space-between;
   background: #1b2430;
-  padding: 20px 80px;
+  padding: 20px 30px;
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.7);
 }
 .navbar {
@@ -18,7 +18,7 @@ nav {
 }
 .navbar li a {
   text-decoration: none;
-  font-size: 1.3rem;
+  font-size: 1rem;
   font-weight: 600;
   color: white;
   transition: 0.3s ease-in-out;
@@ -40,6 +40,42 @@ nav {
 .burget {
   display: none;
 }
+.searchForm {
+  position: relative;
+}
+.searchInput {
+  width: 15rem;
+  height: 2rem;
+  padding: 0 1rem;
+  border-radius: 30px;
+  border: none;
+  background: #ffffff;
+  transition: transform 0.1s ease-in-out;
+}
+:focus::placeholder {
+  text-indent: -999px;
+}
+.searchIcon {
+  position: absolute;
+  right: 0.8rem;
+  top: 0.5rem;
+  color: #17cf97;
+}
+.signIn{
+  padding: 10px 15px;
+  background-image: linear-gradient(to right, #0077b3, #003366);
+  color: white;
+  border: none;
+  border-radius: 3px;
+}
+.signIn:hover{
+  background-image: linear-gradient(to right, #E040FB, #00BCD4);
+  cursor: pointer;
+}
+.settings i{
+  
+}
+/*---------------Responsive Moblie------------------*/
 @media screen and (max-width: 720px) {
   .navbar {
     display: flex;
@@ -47,25 +83,33 @@ nav {
     align-items: flex-start;
     justify-content: flex-start;
     position: fixed;
-    top: 90px;
+    top: 87px;
     right: -300px;
+    transition: 1s ease-in-out;
     height: 100vh;
-    width: 250px;
+    width: 200px;
     background: #2a3239;
     padding: 40px 0 0 10px;
     box-shadow: 0 40px 60px rgba(0, 0, 0, 0.7);
   }
   .navbar.active {
     right: 0px;
+    transition: 1s ease-in-out;
   }
   .burget {
     display: block;
   }
+  .settings i{
+    
+  }
   .navbar li {
     margin-bottom: 25px;
   }
+  .searchInput {
+    width: 10rem;
+  }
   .burget i {
-    font-size: 25px;
+    font-size: 20px;
     cursor: pointer;
   }
 }
