--- a/src/Component/Header/Navbar/NavbarStyle.css
+++ b/src/Component/Header/Navbar/NavbarStyle.css
@@ -16,9 +16,9 @@ nav {
 }
 .navbar li a {
   text-decoration: none;
-  font-size: 1rem;
-  font-weight: 600;
+  font-size: 0.8rem;
   color: white;
+  text-transform: uppercase;
   transition: 0.3s ease-in-out;
 }
 .navbar li a:hover,
@@ -32,7 +32,7 @@ nav {
   height: 2px;
   background: #17cf97;
   position: absolute;
-  left: 25px;
+  left: 20px;
   bottom: -5px;
 }
 .burget {
